feat: load data

--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "ts-node": "^7.0.1"
   },
   "dependencies": {
+    "ajv": "^6.5.3",
     "argv": "0.0.2",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "sqlite3": "^4.0.2",
     "typeorm": "^0.2.7"
   }
