--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "ajv": "^6.5.3",
     "argv": "0.0.2",
+    "csvdata": "^1.7.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "sqlite3": "^4.0.2",
