--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Acceptedlc/FinancialReport#readme",
   "devDependencies": {
+    "@types/express": "^4.16.0",
     "@types/lodash": "^4.14.116",
     "@types/node": "^10.9.4",
     "ts-node": "^7.0.1"
@@ -27,6 +28,7 @@
     "ajv": "^6.5.3",
     "argv": "0.0.2",
     "csvdata": "^1.7.0",
+    "express": "^4.16.3",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "sqlite3": "^4.0.2",
